tests/conformance/syntax/positive/frontend_valid_unicode_arrow.ditt
module Frontend.SurfaceValidUnicodeArrow where

postulate C : Cat
id : (x : C) → C = λx. x
