tests/conformance/syntax/negative/identifier_digit_start_invalid.ditt
module Syntax.IdentifierDigitStartBad where

postulate 1C : Cat
id (x : 1C) : 1C = x
